fix: fix loader z-index, main page gap

--- a/src/components/Preloader/preloader.scss
+++ b/src/components/Preloader/preloader.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 10100;
 };
 .preloader-container {
     position: fixed;
@@ -11,5 +12,5 @@
     bottom: 0;
     background: black;
     opacity: 0.1;
-    z-index: 1001;
+    z-index: 10000;
 };
