--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -11,7 +11,7 @@
 .section {
   max-width: 1920px;
   width: 100%;
-  margin: 0 auto 14vh;
+  margin: 0 auto;
 
   &:first-of-type {
     padding-top: 3rem;
